--- a/test/testfiles/common/languageDirAttributeIsUsed-fail-4.html
+++ b/test/testfiles/common/languageDirAttributeIsUsed-fail-4.html
@@ -25,7 +25,8 @@
         <script id="qunit-script">
             test('languageDirAttributeIsUsed', function() {
             	  quailTest.runTest('languageDirAttributeIsUsed' );
-            	  equal(true, quailTest.confirmIsTag('p'), 'Paragraph has mixed direction');
+            	  console.log(quailTest.results);
+                  equal(true, quailTest.confirmIsTag('p'), 'Paragraph has mixed direction');
             });
         </script>
     </body>
