Added test files for langaugeChangesAreIdentified, made latin not contain whitespace. #58

--- a/test/quail.html
+++ b/test/quail.html
@@ -411,6 +411,12 @@
             "testfiles/common/labelMustNotBeEmpty-fail.html",
             "testfiles/common/labelMustNotBeEmpty-pass-2.html",
             "testfiles/common/labelMustNotBeEmpty-pass.html",
+            "testfiles/common/languageChangesAreIdentified-fail.html",
+            "testfiles/common/languageChangesAreIdentified-fail-2.html",
+            "testfiles/common/languageChangesAreIdentified-fail-3.html",
+            "testfiles/common/languageChangesAreIdentified-pass.html",
+            "testfiles/common/languageChangesAreIdentified-pass-2.html",
+            "testfiles/common/languageChangesAreIdentified-pass-3.html",
             "testfiles/common/languageDirAttributeIsUsed-pass.html",
             "testfiles/common/languageDirAttributeIsUsed-pass-2.html",
             "testfiles/common/languageDirAttributeIsUsed-fail.html",
