Cleaned up emoticon detection to use regex instead of string file.
Todo: Asked the emoticons.com folks for a list of all emoticons so we
can capture more characters.

--- a/test/testfiles/common/emoticonsMissingAbbr-pass.html
+++ b/test/testfiles/common/emoticonsMissingAbbr-pass.html
@@ -8,9 +8,11 @@
     </head>
     
     <body>
-        <p>Just a regular paragraph.</p>
-        <p>I feel <abbr title="a smiley">:)</abbr>
-        </p>
+        <div id="quail-scope">
+            <p>Just a regular paragraph.</p>
+            <p>I feel <abbr title="happy">:)</abbr>
+            </p>
+        </div>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
