--- a/test/testfiles/common/emoticonsExcessiveUse-fail.html
+++ b/test/testfiles/common/emoticonsExcessiveUse-fail.html
@@ -8,8 +8,10 @@
     </head>
     
     <body>
-        <p>Just a regular paragraph.</p>
-        <p>I am feeling :) :( B) :/ :P :o</p>
+        <div id="quail-scope">
+            <p>Just a regular paragraph.</p>
+            <p>I am feeling :) :( B) :/ :P :o</p>
+        </div>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
