--- a/test/testfiles/common/emoticonsExcessiveUse-pass.html
+++ b/test/testfiles/common/emoticonsExcessiveUse-pass.html
@@ -8,7 +8,9 @@
     </head>
     
     <body>
-        <p>Just a regular paragraph.</p>
+        <div id="quail-scope">
+            <p>Just a regular paragraph.</p>
+        </div>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
