--- a/test/testfiles/common/emoticonsMissingAbbr-fail.html
+++ b/test/testfiles/common/emoticonsMissingAbbr-fail.html
@@ -8,8 +8,10 @@
     </head>
     
     <body>
-        <p>Just a regular paragraph.</p>
-        <p>I feel :)</p>
+        <div id="quail-scope">
+            <p>Just a regular paragraph.</p>
+            <p>I feel :)</p>
+        </div>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
