Cleaned up the last of the easy tests.

--- a/test/accessibility-tests/tableCaptionIdentifiesTable.html
+++ b/test/accessibility-tests/tableCaptionIdentifiesTable.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tableSummaryDoesNotDuplicateCaption</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableSummaryDoesNotDuplicateCaption">
+<head>
+    <title>tableCaptionIdentifiesTable</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableCaptionIdentifiesTable">
 
-<table border="1" summary="cups of coffee consumed by each senator">
-            <caption>Cups of coffee consumed by each senator</caption>
+        <table border="1">
+            <caption class="quail-failed-element">Cups of coffee consumed by each senator</caption>
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -45,11 +45,11 @@
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="tableSummaryDoesNotDuplicateCaption">
+    </div>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableCaptionIdentifiesTable">
 
-<table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
-            <caption>Cups of coffee consumed by each senator</caption>
+        <table border="1">
+            <caption class="quail-failed-element">Caption Goes Here</caption>
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -87,8 +87,8 @@
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
+    </div>
 
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
