--- a/test/accessibility-tests/selectDoesNotChangeContext.html
+++ b/test/accessibility-tests/selectDoesNotChangeContext.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html>
-	<head>
-		<title>selectDoesNotChangeContext</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="selectDoesNotChangeContext">
-
-<h1>Dynamic Select Statements</h1>
+<head>
+    <title>selectDoesNotChangeContext</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="selectDoesNotChangeContext">
+        <h1>Dynamic Select Statements</h1>
 
         <form action="http://www.example.com/test" method="post">
             <p>
                 <label for="continent">Select Continent</label>
-                <select id="continent" onchange="countryChange(this);">
+                <select id="continent" onchange="countryChange(this);" class="quail-failed-element">
                     <option value="empty">Select a Continent</option>
                     <option value="North America">North America</option>
                     <option value="South America">South America</option>
@@ -27,23 +26,23 @@
                 <input type="submit" value="select country" />
             </p>
         </form>
-		</div>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="selectDoesNotChangeContext">
+    </div>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="selectDoesNotChangeContext">
 
-<form action="http://www.example.com/test" method="post">
+        <form action="http://www.example.com/test" method="post">
             <p>
                 <label for="select1">Pick A Number:</label>
-                <select name="abcselect" id="select1" onchange="form.submit();">
+                <select name="abcselect" id="select1" onchange="form.submit();" class="quail-failed-element">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                 </select>
             </p>
         </form>
-		</div>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="selectDoesNotChangeContext">
+    </div>
+    <div class="quail-test" data-expected="pass" data-accessibility-test="selectDoesNotChangeContext">
 
-<form action="http://www.example.com/test" method="post">
+        <form action="http://www.example.com/test" method="post">
             <p>
                 <label for="select1">Pick A Number:</label>
                 <select name="abcselect" id="select1">
@@ -55,8 +54,8 @@
                 <input type="submit" value="select number" />
             </p>
         </form>
-		</div>
+    </div>
 
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
