--- a/test/accessibility-tests/tableDataShouldHaveTh.html
+++ b/test/accessibility-tests/tableDataShouldHaveTh.html
@@ -1,12 +1,52 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tableSummaryIsEmpty</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableSummaryIsEmpty">
+<head>
+    <title>tableDataShouldHaveTh</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableDataShouldHaveTh">
+        <table border="1" class="quail-failed-element">
+            <tr>
+                <td>name</td>
+                <td>number of cups</td>
+                <td>type</td>
+                <td>with sugar</td>
+            </tr>
+            <tr>
+                <td>Adams, Willie</td>
+                <td>2</td>
+                <td>regular</td>
+                <td>sugar</td>
+            </tr>
+            <tr>
+                <td>Bacon, Lise</td>
+                <td>4</td>
+                <td>regular</td>
+                <td>no sugar</td>
+            </tr>
+            <tr>
+                <td>Chaput, Maria</td>
+                <td>1</td>
+                <td>decaf</td>
+                <td>sugar</td>
+            </tr>
+            <tr>
+                <td>Di Nino, Consiglio</td>
+                <td>0</td>
+                <td>not applicable</td>
+                <td>not applicable</td>
+            </tr>
+            <tr>
+                <td>Eggleton, Art</td>
+                <td>6</td>
+                <td>regular</td>
+                <td>no sugar</td>
+            </tr>
+        </table>
+    </div>
 
-<table border="1" summary="">
+    <div class="quail-test" data-expected="pass" data-accessibility-test="tableDataShouldHaveTh">
+        <table border="1">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -44,49 +84,8 @@
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="tableSummaryIsEmpty">
+    </div>
 
-<table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
-            <tr>
-                <th>name</th>
-                <th>number of cups</th>
-                <th>type</th>
-                <th>with sugar</th>
-            </tr>
-            <tr>
-                <td>Adams, Willie</td>
-                <td>2</td>
-                <td>regular</td>
-                <td>sugar</td>
-            </tr>
-            <tr>
-                <td>Bacon, Lise</td>
-                <td>4</td>
-                <td>regular</td>
-                <td>no sugar</td>
-            </tr>
-            <tr>
-                <td>Chaput, Maria</td>
-                <td>1</td>
-                <td>decaf</td>
-                <td>sugar</td>
-            </tr>
-            <tr>
-                <td>Di Nino, Consiglio</td>
-                <td>0</td>
-                <td>not applicable</td>
-                <td>not applicable</td>
-            </tr>
-            <tr>
-                <td>Eggleton, Art</td>
-                <td>6</td>
-                <td>regular</td>
-                <td>no sugar</td>
-            </tr>
-        </table>
-		</div>
-
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
