--- a/test/accessibility-tests/tableSummaryIsEmpty.html
+++ b/test/accessibility-tests/tableSummaryIsEmpty.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tableCaptionIdentifiesTable</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableCaptionIdentifiesTable">
-
-<table border="1">
-            <caption>Cups of coffee consumed by each senator</caption>
+<head>
+    <title>tableSummaryIsEmpty</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableSummaryIsEmpty">
+        <table border="1" summary="" class="quail-failed-element">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -45,11 +43,10 @@
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableCaptionIdentifiesTable">
+    </div>
 
-<table border="1">
-            <caption>Caption Goes Here</caption>
+    <div class="quail-test" data-expected="pass" data-accessibility-test="tableSummaryIsEmpty">
+        <table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -87,8 +84,8 @@
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
+    </div>
 
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
