--- a/test/accessibility-tests/tableSummaryIsNotTooLong.html
+++ b/test/accessibility-tests/tableSummaryIsNotTooLong.html
@@ -1,26 +1,12 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tabularDataIsInTable</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tabularDataIsInTable">
+<head>
+    <title>tableSummaryIsNotTooLong</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableSummaryIsNotTooLong">
 
-<p>
-<pre>
-name           number of cups   type   with sugar
-Adams, Willie      2		regular		sugar
-Bacon, Lise        4		regular		no sugar
-Chaput, Maria      1		decaf		sugar
-Di Nino, Consiglio 0		n/a		n/a
-Eggleton, Art      6		regular		no sugar 
-</pre>
-
-        </p>
-		</div>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="tabularDataIsInTable">
-
-<table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
+        <table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar." class="quail-failed-element">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -58,8 +44,8 @@ Eggleton, Art      6		regular		no sugar
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
+    </div>
 
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
