--- a/test/accessibility-tests/tableUseColGroup.html
+++ b/test/accessibility-tests/tableUseColGroup.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tableUseColGroup</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableUseColGroup">
-
-<p>From the WCAG 2.0 HTML techniques: "Describe the use and benefits of column
-            structure elements. Much of this may be theoretical."</p>
-        <table border="1"
-        summary="cups of coffee consumed by city politicians">
+<head>
+    <title>tableUseColGroup</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableUseColGroup">
+        <p>
+            From the WCAG 2.0 HTML techniques: "Describe the use and benefits of column
+            structure elements. Much of this may be theoretical."
+        </p>
+        <table border="1" summary="cups of coffee consumed by city politicians">
+            class="quail-failed-element"
             <thead>
                 <tr>
                     <th>name</th>
@@ -51,13 +52,15 @@
                 </tr>
             </tbody>
         </table>
-		</div>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="tableUseColGroup">
+    </div>
 
-<p>From the WCAG 2.0 HTML techniques: "Describe the use and benefits of column
-            structure elements. Much of this may be theoretical."</p>
-		</div>
+    <div class="quail-test" data-expected="pass" data-accessibility-test="tableUseColGroup">
+        <p>
+            From the WCAG 2.0 HTML techniques: "Describe the use and benefits of column
+            structure elements. Much of this may be theoretical."
+        </p>
+    </div>
 
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
