--- a/test/accessibility-tests/tableUsesCaption.html
+++ b/test/accessibility-tests/tableUsesCaption.html
@@ -1,53 +1,12 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tableDataShouldHaveTh</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableDataShouldHaveTh">
+<head>
+    <title>tableUsesCaption</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableUsesCaption">
 
-<table border="1">
-            <tr>
-                <td>name</td>
-                <td>number of cups</td>
-                <td>type</td>
-                <td>with sugar</td>
-            </tr>
-            <tr>
-                <td>Adams, Willie</td>
-                <td>2</td>
-                <td>regular</td>
-                <td>sugar</td>
-            </tr>
-            <tr>
-                <td>Bacon, Lise</td>
-                <td>4</td>
-                <td>regular</td>
-                <td>no sugar</td>
-            </tr>
-            <tr>
-                <td>Chaput, Maria</td>
-                <td>1</td>
-                <td>decaf</td>
-                <td>sugar</td>
-            </tr>
-            <tr>
-                <td>Di Nino, Consiglio</td>
-                <td>0</td>
-                <td>not applicable</td>
-                <td>not applicable</td>
-            </tr>
-            <tr>
-                <td>Eggleton, Art</td>
-                <td>6</td>
-                <td>regular</td>
-                <td>no sugar</td>
-            </tr>
-        </table>
-		</div>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="tableDataShouldHaveTh">
-
-<table border="1">
+        <table border="1" class="quail-failed-element">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -85,8 +44,50 @@
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
+    </div>
+    <div class="quail-test" data-expected="pass" data-accessibility-test="tableUsesCaption">
 
-		<script src="../testrunner.js"></script>
-	</body>
+        <table border="1">
+            <caption>Coffee Consumed By Senators</caption>
+            <tr>
+                <th>name</th>
+                <th>number of cups</th>
+                <th>type</th>
+                <th>with sugar</th>
+            </tr>
+            <tr>
+                <td>Adams, Willie</td>
+                <td>2</td>
+                <td>regular</td>
+                <td>sugar</td>
+            </tr>
+            <tr>
+                <td>Bacon, Lise</td>
+                <td>4</td>
+                <td>regular</td>
+                <td>no sugar</td>
+            </tr>
+            <tr>
+                <td>Chaput, Maria</td>
+                <td>1</td>
+                <td>decaf</td>
+                <td>sugar</td>
+            </tr>
+            <tr>
+                <td>Di Nino, Consiglio</td>
+                <td>0</td>
+                <td>not applicable</td>
+                <td>not applicable</td>
+            </tr>
+            <tr>
+                <td>Eggleton, Art</td>
+                <td>6</td>
+                <td>regular</td>
+                <td>no sugar</td>
+            </tr>
+        </table>
+    </div>
+
+    <script src="../testrunner.js"></script>
+</body>
 </html>
