--- a/test/accessibility-tests/tableWithBothHeadersUseScope.html
+++ b/test/accessibility-tests/tableWithBothHeadersUseScope.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tableWithBothHeadersUseScope</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableWithBothHeadersUseScope">
+<head>
+    <title>tableWithBothHeadersUseScope</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tableWithBothHeadersUseScope">
 
-<table border="1">
+        <table border="1" class="quail-failed-element">
             <tr>
                 <th>Name</th>
                 <th>Birth</th>
@@ -39,10 +39,10 @@
             </tr>
             <tr></tr>
         </table>
-		</div>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="tableWithBothHeadersUseScope">
+    </div>
+    <div class="quail-test" data-expected="pass" data-accessibility-test="tableWithBothHeadersUseScope">
 
-<table border="1">
+        <table border="1">
             <tr>
                 <th scope="col">Name</th>
                 <th scope="col">Birth</th>
@@ -74,8 +74,8 @@
                 <td>male</td>
             </tr>
         </table>
-		</div>
+    </div>
 
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
