--- a/test/accessibility-tests/tabularDataIsInTable.html
+++ b/test/accessibility-tests/tabularDataIsInTable.html
@@ -1,12 +1,25 @@
 <!doctype html>
 <html>
-	<head>
-		<title>tableSummaryIsNotTooLong</title>
-	</head>
-	<body>
-		<div class="quail-test" data-expected="fail" data-accessibility-test="tableSummaryIsNotTooLong">
+<head>
+    <title>tabularDataIsInTable</title>
+</head>
+<body>
+    <div class="quail-test" data-expected="fail" data-accessibility-test="tabularDataIsInTable">
+        <p>
+            <pre class="quail-failed-element">
+name           number of cups   type   with sugar
+Adams, Willie      2        regular     sugar
+Bacon, Lise        4        regular     no sugar
+Chaput, Maria      1        decaf       sugar
+Di Nino, Consiglio 0        n/a     n/a
+Eggleton, Art      6        regular     no sugar 
+</pre>
 
-<table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
+        </p>
+    </div>
+    
+    <div class="quail-test" data-expected="pass" data-accessibility-test="tabularDataIsInTable">
+        <table border="1" summary="This table shows the number of cups of coffee consumed by each senator, the type of coffee (decaf or regular), and whether taken with sugar.">
             <tr>
                 <th>name</th>
                 <th>number of cups</th>
@@ -44,8 +57,8 @@
                 <td>no sugar</td>
             </tr>
         </table>
-		</div>
+    </div>
 
-		<script src="../testrunner.js"></script>
-	</body>
+    <script src="../testrunner.js"></script>
+</body>
 </html>
