Fixed SVG tests.

--- a/test/accessibility-tests/documentLangIsISO639Standard-pass.html
+++ b/test/accessibility-tests/documentLangIsISO639Standard-pass.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html  class="quail-test self-fail" data-expected="pass" data-accessibility-test="appletsDoNotFlicker" lang="no-language">
+<html  class="quail-test self-fail" data-expected="pass" data-accessibility-test="appletsDoNotFlicker" lang="en">
     
     <head>
         <title>documentLangIsISO639Standard-fail</title>
