Added more accessibility tests. Close to completing all tests.

--- a/test/core/defaultLanguageFound.html
+++ b/test/core/defaultLanguageFound.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <script src="../testrunner.js"></script>
-  <script id="qunit-script">
+  <script>
     (function(global) {
       global.quailTest = function() {
         var custom = {
