--- a/test/core/eventComplete.html
+++ b/test/core/eventComplete.html
@@ -10,7 +10,7 @@
     <img src="../assets/rex.jpg" />
   </p>
   <script src="../testrunner.js"></script>
-  <script id="qunit-script">
+  <script>
     (function(global) {
       global.quailTest = function() {
         test('quailEventComplete', function() {
