--- a/test/core/guidelineFallback.html
+++ b/test/core/guidelineFallback.html
@@ -16,7 +16,7 @@
 
   </div>
   <script src="../testrunner.js"></script>
-  <script id="qunit-script">
+  <script>
     (function(global) {
       global.quailTest = function() {
         test('guidelineFallback', function() {
