--- a/test/core/defaultLanguageBrowser.html
+++ b/test/core/defaultLanguageBrowser.html
@@ -24,7 +24,7 @@
   </div>
 
   <script src="../testrunner.js"></script>
-  <script id="qunit-script">
+  <script>
     (function(global) {
       global.quailTest = function() {
         var custom = {
