Issue 101:  'inapplicable', 'failed', 'passed', 'cantTell', and 'untested'

--- a/test/testfiles/common/imgHasAlt-pass.html
+++ b/test/testfiles/common/imgHasAlt-pass.html
@@ -17,8 +17,9 @@
         <script id="qunit-qunit" src="../../../lib/qunit/qunit/qunit.js"></script>
         <script>
             test('imgHasAlt', function() {
+                debugger;
                 quailTest.runTest('imgHasAlt');
-                equal(true, quailTest.confirmStatus('pass'), 'Image has an alt attribute');
+                equal(true, quailTest.confirmStatus('passed'), 'Image has an alt attribute');
               });
         </script>
     </body>
