Mixed most of the document tests, fixed tests.json file creation task.

--- a/test/accessibility-tests/bodyMustNotHaveBackground-fail.html
+++ b/test/accessibility-tests/bodyMustNotHaveBackground-fail.html
@@ -4,7 +4,7 @@
     <title>bodyMustNotHaveBackground-fail</title>
 </head>
 
-<body background="resources/rex.jpg" class="quail-failed-element">
+<body background="../assets/rex.jpg" class="quail-failed-element">
     <p>This is some example text.</p>
 	<script src="../testrunner.js"></script>
 </body>
