--- a/test/accessibility-tests/documentAutoRedirectNotUsed-fail.html
+++ b/test/accessibility-tests/documentAutoRedirectNotUsed-fail.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html class="quail-test" data-expected="fail" data-accessibility-test="documentAutoRedirectNotUsed">
 <head>
-    <title>documentAutoRedirectNotUsed-fail</title>
-    <meta class="quail-failed-element" http-equiv="refresh" content="http://www.foo.com/bar.html"/>
+	<title>documentAutoRedirectNotUsed-fail</title>
+	<meta class="quail-failed-element" http-equiv="refresh" content="http://www.foo.com/bar.html"/>
 </head>
 
-<body></body>
+<body>
+	<p>This page has an auto-redirect.</p>
+	<script src="../testrunner.js"></script>
+</body>
 
 </html>
