--- a/test/accessibility-tests/liDontUseImageForBullet.html
+++ b/test/accessibility-tests/liDontUseImageForBullet.html
@@ -8,11 +8,11 @@
     <p>
       <ul>
         <li class="quail-failed-element">
-          <img src="bullet.png">This is item one</li>
+          <img src="../assets/bullet.png">This is item one</li>
         <li class="quail-failed-element">
-          <img src="bullet.png">This is item two</li>
+          <img src="../assets/bullet.png">This is item two</li>
         <li class="quail-failed-element">
-          <img src="bullet.png">This is item three</li>
+          <img src="../assets/bullet.png">This is item three</li>
       </ul>
     </p>
   </div>
