--- a/test/core/customTest.html
+++ b/test/core/customTest.html
@@ -36,7 +36,7 @@
               }
             }
           };
-          $('.test-area').quail({ jsonPath : '../../../dist',
+          $('.test-area').quail({ jsonPath : '../../dist',
                               guideline : [ 'customTestSelector', 'customTestCallback' ],
                               reset : true,
                               customTests : custom,
