--- a/test/core/defaultLanguageBrowser.html
+++ b/test/core/defaultLanguageBrowser.html
@@ -40,7 +40,7 @@
             }
           }
         };
-        $('.no-language').quail({ jsonPath : '../../../dist',
+        $('.no-language').quail({ jsonPath : '../../dist',
           guideline : [ 'findBrowserLanguage' ],
           reset : true,
           customTests : custom
