--- a/test/core/defaultLanguageFound.html
+++ b/test/core/defaultLanguageFound.html
@@ -34,7 +34,7 @@
             }
           }
         };
-        $('.current-element').quail({ jsonPath : '../../../dist',
+        $('.current-element').quail({ jsonPath : '../../dist',
           guideline : [ 'findCurrentLanguage' ],
           reset : true,
           customTests : custom
