--- a/test/core/defaultLanguageFoundFromParent.html
+++ b/test/core/defaultLanguageFoundFromParent.html
@@ -38,7 +38,7 @@
           }
         };
         
-        $('.parent-element').quail({ jsonPath : '../../../dist',
+        $('.parent-element').quail({ jsonPath : '../../dist',
           guideline : [ 'findParentLanguage' ],
           reset : true,
           customTests : custom
