--- a/test/accessibility-tests/bodyColorContrast-pass.html
+++ b/test/accessibility-tests/bodyColorContrast-pass.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html class="quail-test" data-expected="pass" data-accessibility-test="bodyColorContrast">
 <head>
-    <title>bodyColorContrast-fail</title>
+    <title>bodyColorContrast-pass</title>
 </head>
 
-<body bgcolor="#ffffff" text="#000000" class="quail-failed-element">
+<body bgcolor="#ffffff" text="#000000">
     <p>This is some example text.</p>
 	<script src="../testrunner.js"></script>
 </body>
