--- a/test/accessibility-tests/documentAbbrIsUsed.html
+++ b/test/accessibility-tests/documentAbbrIsUsed.html
@@ -10,8 +10,7 @@
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="documentAbbrIsUsed">
 		<p>
-			Everyone loves <abbr title="Quail accesibility information library">QUAIL</abbr>
-			.
+			Everyone loves <abbr title="Quail accesibility information library">QUAIL</abbr>.
 		</p>
 	</div>
 
