--- a/test/accessibility-tests/documentAllColorsAreSet-pass.html
+++ b/test/accessibility-tests/documentAllColorsAreSet-pass.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html class="quail-test" data-expected="fail" data-accessibility-test="documentAllColorsAreSet">
+<html class="quail-test" data-expected="pass" data-accessibility-test="documentAllColorsAreSet">
 <head>
     
     <head>
-        <title>documentAllColorsAreSet-fail</title>
+        <title>documentAllColorsAreSet-pass</title>
     </head>
     
     <body bgcolor="#ffffff" text="#000000" link="#000000" vlink="#000000"
-    alink="#000000" class="quail-failed-element">
+    alink="#000000">
         <p>This is some example text.</p>
         <script src="../testrunner.js"></script>
     </body>
