--- a/test/accessibility-tests/documentTitleIsNotPlaceholder-fail-2.html
+++ b/test/accessibility-tests/documentTitleIsNotPlaceholder-fail-2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="quail-test" data-accessibility-test="documentTitleIsNotPlaceholder" data-expected="pass">
+<html class="quail-test" data-accessibility-test="documentTitleIsNotPlaceholder" data-expected="fail">
     
     <head>
         <title class="quail-failed-element">title</title>
