--- a/test/accessibility-tests/imgAltIsSameInText.html
+++ b/test/accessibility-tests/imgAltIsSameInText.html
@@ -1,21 +1,17 @@
 <!doctype html>
 <html>
-<head>
-	<title>imgAltIsSameInText</title>
-</head>
-<body>
-	<div class="quail-test" data-expected="fail" data-accessibility-test="imgAltIsSameInText">
-		<p>
-			<img src="http://www.w3.org/StyleSheets/TR/logo-WD.png" alt="logo" class="quail-failed-element"/>
-		</p>
-	</div>
+	<head>
+		<title>imgAltIsSameInText</title>
+	</head>
+	<body>
+		<div class="quail-test" data-expected="fail" data-accessibility-test="imgAltIsSameInText">
+		  <img src="../assets/rex.jpg" alt="My cat" class="quail-failed-element"/>
+		</div>
 
-	<div class="quail-test" data-expected="pass" data-accessibility-test="imgAltIsSameInText">
-		<p>
-			No image.
-		</p>
-	</div>
+		<div class="quail-test" data-expected="pass" data-accessibility-test="imgAltIsSameInText">
+		  <p>No image</p>
+		</div>
 
-	<script src="../testrunner.js"></script>
-</body>
+
+		<script src="../testrunner.js"></script>	</body>
 </html>
