--- a/test/accessibility-tests/imgAltTextNotRedundant.html
+++ b/test/accessibility-tests/imgAltTextNotRedundant.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 	<div class="quail-test" data-expected="fail" data-accessibility-test="imgAltTextNotRedundant">
-		<img src="../common/resources/rex.jpg" alt="this is an image of rex">
-		<img src="../oac/me.jpg" alt="this is an image of rex" class="quail-failed-element">
+		<img src="../assets/rex.jpg" alt="this is an image of rex">
+		<img src="../assets/chart.gif" alt="this is an image of rex" class="quail-failed-element">
 	</div>
 	<div class="quail-test" data-expected="pass" data-accessibility-test="imgAltTextNotRedundant">
 
-		<img src="../common/resources/rex.jpg" alt="this is an image of rex">
-		<img src="../common/resources/rex.jpg" alt="this is an image of rex">
+		<img src="../assets/rex.jpg" alt="this is an image of rex">
+		<img src="../assets/rex.jpg" alt="this is an image of rex">
 	</div>
 
 	<script src="../testrunner.js"></script>
