--- a/test/accessibility-tests/scriptOnclickRequiresOnKeypress.html
+++ b/test/accessibility-tests/scriptOnclickRequiresOnKeypress.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnclickRequiresOnKeypress">
-		<input name="num" onclick="foo" value="0" class="quail-failed-element"/>
+		<input name="num" onclick="'foo';" value="0" class="quail-failed-element"/>
 	</div>
 
 	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnclickRequiresOnKeypress">
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
-		<input name="num" onclick="foo" onkeypress="bar" value="0"></div>
+		<input name="num" onclick="'foo';" onkeypress="'bar';" value="0"></div>
 
 	<script src="../testrunner.js"></script>
 </body>
