--- a/test/accessibility-tests/scriptOndblclickRequiresOnKeypress.html
+++ b/test/accessibility-tests/scriptOndblclickRequiresOnKeypress.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOndblclickRequiresOnKeypress">
-		<input name="num" ondblclick="bar" value="0" class="quail-failed-element"/>
+		<input name="num" ondblclick="'foo';" value="0" class="quail-failed-element"/>
 	</div>
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOndblclickRequiresOnKeypress">
