--- a/test/accessibility-tests/scriptOnmousedownRequiresOnKeypress.html
+++ b/test/accessibility-tests/scriptOnmousedownRequiresOnKeypress.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnmousedownRequiresOnKeypress">
-		<input name="num" onmousedown="foo" value="0" class="quail-failed-element"/>
+		<input name="num" onmousedown="'foo';" value="0" class="quail-failed-element"/>
 	</div>
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnmousedownRequiresOnKeypress">
-		<input name="num" onmousedown="foo" onkeydown="bar" value="0" />
+		<input name="num" onmousedown="'foo';" onkeydown="'bar';" value="0" />
 
 	</div>
 
