--- a/test/accessibility-tests/scriptOnmousemove.html
+++ b/test/accessibility-tests/scriptOnmousemove.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnmousemove">
-		<input name="num" onmousemove="bar" value="0" class="quail-failed-element"/>
+		<input name="num" onmousemove="'foo';" value="0" class="quail-failed-element"/>
 	</div>
 	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnmousemove">
 			<input name="num" value="0"/>
