--- a/test/accessibility-tests/focusIndicatorVisible.html
+++ b/test/accessibility-tests/focusIndicatorVisible.html
@@ -54,14 +54,14 @@
     </style>
 </head>
 <body>
-  <div class="quail-test" data-expected="fail" data-accessibility-test="focusIndicatorVisible" id="test-1">
+  <div class="quail-test limit-chrome" data-expected="fail" data-accessibility-test="focusIndicatorVisible" id="test-1">
     <a href="somewhere">This link is highly visible when it gets focus</a>
     <form>
       <label for="input">An input element with a bad focus</label>
       <input type="text" id="input" class="quail-failed-element"></form>
   </div>
 
-  <div class="quail-test" data-expected="fail" data-accessibility-test="focusIndicatorVisible" id="test-2">
+  <div class="quail-test limit-chrome" data-expected="fail" data-accessibility-test="focusIndicatorVisible" id="test-2">
 
     <a href="somewhere" class="quail-failed-element">This link doesn't change much on focus</a>
     <form>
@@ -69,28 +69,28 @@
       <input type="text" id="input"></form>
   </div>
 
-  <div class="quail-test" data-expected="fail" data-accessibility-test="focusIndicatorVisible" id="test-3">
+  <div class="quail-test limit-chrome" data-expected="fail" data-accessibility-test="focusIndicatorVisible" id="test-3">
     <a href="somewhere">This link is highly visible when it gets focus</a>
     <form>
       <label for="input">An input element with a bad focus</label>
       <input type="text" id="input" class="quail-failed-element"></form>
   </div>
 
-  <div class="quail-test" data-expected="pass" data-accessibility-test="focusIndicatorVisible" id="test-4">
+  <div class="quail-test limit-chrome" data-expected="pass" data-accessibility-test="focusIndicatorVisible" id="test-4">
     <a href="somewhere">This link is highly visible when it gets focus</a>
     <form>
       <label for="input">An input element with a highly-visible focus</label>
       <input type="text" id="input"></form>
   </div>
 
-  <div class="quail-test" data-expected="pass" data-accessibility-test="focusIndicatorVisible" id="test-5">
+  <div class="quail-test limit-chrome" data-expected="pass" data-accessibility-test="focusIndicatorVisible" id="test-5">
     <a href="somewhere">This link is highly visible when it gets focus</a>
     <form>
       <label for="input">An input element with a highly-visible focus</label>
       <input type="text" id="input"></form>
   </div>
 
-  <div class="quail-test" data-expected="pass" data-accessibility-test="focusIndicatorVisible" id="test-6">
+  <div class="quail-test limit-chrome" data-expected="pass" data-accessibility-test="focusIndicatorVisible" id="test-6">
     <a href="somewhere">This link is highly visible when it gets focus</a>
     <form>
       <label for="input">An input element with a highly-visible focus</label>
