--- a/test/accessibility-tests/appletsDoNotFlicker.html
+++ b/test/accessibility-tests/appletsDoNotFlicker.html
@@ -4,11 +4,11 @@
 		<title>appletsDoNotFlicker</title>
 	</head>
 	<body>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="appletsDoNotFlicker">
+		<div class="quail-test limit-phantom" data-expected="pass" data-accessibility-test="appletsDoNotFlicker">
 		  
 		</div>
 
-		<div class="quail-test" data-expected="fail" data-accessibility-test="appletsDoNotFlicker">
+		<div class="quail-test limit-phantom" data-expected="fail" data-accessibility-test="appletsDoNotFlicker">
 		  <applet code="http://www.java.com/en/download/JavaDetection.class" width="500" height="150" class="quail-failed-element">
             <param name="image" value="http://www.java.com/im/download/verify_anim.gif">
             <param name="centerimage" value="true"><param name="boxborder" value="false">
