Add test for jQuery events or native events in the hasEventListener component per #142

--- a/test/accessibility-tests/scriptOnclickRequiresOnKeypress.html
+++ b/test/accessibility-tests/scriptOnclickRequiresOnKeypress.html
@@ -8,8 +8,8 @@
 		<input name="num" onclick="'foo';" value="0" class="quail-failed-element"/>
 	</div>
 
-	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnclickRequiresOnKeypress">
-		<input name="num" type="text" value="0" class="quail-failed-element"/>
+	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
+		<input name="num" type="text" value="0"/>
 	</div>
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
@@ -21,17 +21,24 @@
 	</div>
 
 	<div class="quail-test" data-expected="fail" data-accessibility-test="scriptOnclickRequiresOnKeypress">
-		<a type="text" class="quail-failed-element" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
+		<a class="quail-failed-element" id="jquery-event" href="scriptOnclickRequiresOnKeypress.html">A jQuery event link!</a>
 	</div>
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
 		<a onclick="'foo';" onkeypress="'bar';" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
 	</div>
 
-		<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
+	<div class="quail-test" data-expected="pass" data-accessibility-test="scriptOnclickRequiresOnKeypress">
 		<a href="scriptOnclickRequiresOnKeypress.html">A link!</a>
 	</div>
 
 	<script src="../testrunner.js"></script>
-</body>
+	<script>
+		document.addEventListener('testsReady', function() {
+			$('#jquery-event').on('click', function() {
+				alert('You clicked on the link');
+			});
+		});
+	</script>
+	</body>
 </html>
